package NKikimrProto.NMetricsConfig;

option java_package = "ru.yandex.kikimr.proto";

message TMetricsConfig {
    enum EMetricsLevel {
        LEVEL_NONE = 0;
        LEVEL_DATABASE = 1;
        LEVEL_OBJECT = 2;
        LEVEL_DETAILED = 3;
    }
    optional EMetricsLevel Level = 1;
}
